[package]
name = "hash_str"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/krakow10/hash_str"
license = "MIT OR Apache-2.0"
description = "Strings with a precomputed hash."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["hash", "precomputed", "internment", "string", "cache"]

[dependencies]
ahash = { version = "0.8.11", features = ["std","no-rng"], default-features = false }
ahash_macro = "0.1.2"
bumpalo = { version = "3.17.0", optional = true }
hashbrown = { version = "0.15.2", optional = true }
lazy_static = { version = "1.5.0", optional = true }
parking_lot = { version = "0.12.3", optional = true }
serde = { version = "1.0.204", optional = true }

[features]
default = []
cache = ["dep:bumpalo","dep:hashbrown"]
global = ["cache","dep:lazy_static","dep:parking_lot"]
serde = ["dep:serde"]
